--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "To run the project, clone it and run:",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm start --prefix client"
   },
   "repository": {
     "type": "git",
