--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "client": "cd client && npm start",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
