--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,17 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
     "@material-ui/core": "^4.7.0",
+    "@material-ui/icons": "^4.5.1",
+    "antd": "^3.25.3",
+    "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
+    "material-ui-colors": "^1.0.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "reactstrap": "^8.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
