--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "homepage": "https://github.com/zachwhitedev/thruhikefinder#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "express-static-gzip": "^2.0.5"
+    "express": "^4.17.1"
   }
 }
