--- a/client/package.json
+++ b/client/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "client",
+  "name": "react-navbar",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.7",
-    "@material-ui/core": "^4.7.0",
     "axios": "^0.19.0",
-    "font-awesome": "^4.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "reactstrap": "^8.1.1"
+    "react-router-hash-link": "^1.2.2",
+    "react-router-redux": "^4.0.8",
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
